@@ -37,7 +37,9 @@
 
 (eval-when-compile (require 'cl))	;and ah ain't kiddin' 'bout it
 
-(defvar parse-time-syntax (make-vector 256 nil))
+(eval-and-compile
+  (when (featurep 'xemacs)
+    (defvar parse-time-syntax (make-vector 256 nil))))
 (defvar parse-time-digits (make-vector 256 nil))
 
 ;; Byte-compiler warnings
@@ -48,25 +50,35 @@
   (loop for i from ?0 to ?9
     do (aset parse-time-digits i (- i ?0))))
 
-(unless (aref parse-time-syntax ?0)
-  (loop for i from ?0 to ?9
-	do (aset parse-time-syntax i ?0))
-  (loop for i from ?A to ?Z
-	do (aset parse-time-syntax i ?A))
-  (loop for i from ?a to ?z
-	do (aset parse-time-syntax i ?a))
-  (aset parse-time-syntax ?+ 1)
-  (aset parse-time-syntax ?- -1)
-  (aset parse-time-syntax ?: ?d))
+(when (featurep 'xemacs)
+  (unless (aref parse-time-syntax ?0)
+    (loop for i from ?0 to ?9
+	  do (aset parse-time-syntax i ?0))
+    (loop for i from ?A to ?Z
+	  do (aset parse-time-syntax i ?A))
+    (loop for i from ?a to ?z
+	  do (aset parse-time-syntax i ?a))
+    (aset parse-time-syntax ?+ 1)
+    (aset parse-time-syntax ?- -1)
+    (aset parse-time-syntax ?: ?d)))
 
 (defsubst digit-char-p (char)
   (aref parse-time-digits char))
 
-;; Note: the function definition differs from the one in Emacs
-;; in order to keep the compatibility with XEmacs.
-(defsubst parse-time-string-chars (char)
-  (and (< char (length parse-time-syntax))
-       (aref parse-time-syntax char)))
+(eval-and-compile
+  (if (featurep 'xemacs)
+      (defsubst parse-time-string-chars (char)
+	(and (< char (length parse-time-syntax))
+	     (aref parse-time-syntax char)))
+    (defsubst parse-time-string-chars (char)
+      (save-match-data
+	(let (case-fold-search str)
+	  (cond ((eq char ?+) 1)
+		((eq char ?-) -1)
+		((eq char ?:) ?d)
+		((string-match "[[:upper:]]" (setq str (string char))) ?A)
+		((string-match "[[:lower:]]" str) ?a)
+		((string-match "[[:digit:]]" str) ?0)))))))
 
 (put 'parse-error 'error-conditions '(parse-error error))
 (put 'parse-error 'error-message "Parsing error")
