@@ -1,3 +1,8 @@
+2010-01-19  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* parse-time.el (parse-time-syntax): Define it for only XEmacs.
+	(parse-time-string-chars): Implement 2009-08-16 change for Emacs.
+
 2010-01-18  Chong Yidong  <cyd@stupidchicken.com>
 
 	* time-date.el (date-to-time): Doc fix (Bug#5408).
